gig-15: fix filter z-index, add apartment-id href

--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
@@ -60,6 +60,7 @@
     top: 29px;
     border: 1px solid #ccc;
     border-top: 0;
+    z-index: 100;
     .list-item {
       padding: 2px 10px;
       &:hover {
